@@ -1,7 +1,7 @@
 if BUILD_OFXCONNECT
        MAYBE_OFXCONNECT = ofxconnect
 endif
-SUBDIRS = inc dtd lib doc . ofx2qif ofxdump $(MAYBE_OFXCONNECT)
+SUBDIRS = m4 inc dtd lib doc . ofx2qif ofxdump $(MAYBE_OFXCONNECT)
 
 docdir = ${prefix}/share/doc/libofx
 
