@@ -1,0 +1,3 @@
+
+EXTRA_DIST= os.m4
+
